# computer-club-manager

./: CMakeLists.txt  README.md  main.cpp
src/: Client.cpp  Client.h  Club.cpp  Club.h  Event.h  Exceptions.h  Parser.cpp  Parser.h  TTime.h  Table.cpp  Table.h
